# primoburner-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  configure.ps1  configure.sh  vcpkg-configuration.json  vcpkg.json
docs/: build-linux.md  build-mac.md  build-windows.md  download-primoburner-core-linux.md  download-primoburner-core-mac.md  download-primoburner-core-windows.md  setup-linux.md  setup-mac.md  setup-windows.md
samples/: CMakeLists.txt
samples/darwin/bluray-data/: Burner.cpp  Burner.h  BurnerApp.cpp  BurnerApp.h  BurnerCallback.h  BurnerException.cpp  BurnerException.h  BurnerSettings.h  CMakeLists.txt  ConsoleUtils.h  README.md  stdafx.h
samples/linux/: README.md
samples/linux/bluray-data/: CMakeLists.txt
samples/windows/: README.md
samples/windows/bluray-data/: Burner.cpp  Burner.h  BurnerApp.cpp  BurnerApp.h  BurnerCallback.h  BurnerException.h  BurnerSettings.h  CMakeLists.txt  README.md  main.cpp  stdafx.h
scripts/: Invoke-CmdScript.ps1  build.ps1  build.sh  clean.sh
